# spatial-cpp

./: CMakeLists.txt
include/spatial/: grid.hpp  rect.hpp  vector2.hpp
include/spatial/utils/: macros.hpp  matrix.hpp  thrower.hpp
src/spatial/utils/: thrower.cpp
test/: CMakeLists.txt  grid.cpp
